[tool.poetry]
name = "python-srtm"
version = "0.4.0"
description = ""
authors = ["Adam Charnock <adam@adamcharnock.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adamcharnock/python-srtm"
keywords = ["nasa", "geospatial", "altitude", "elevation-profile"]
packages = [
    { include = "srtm" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
dephell = "^0.8.2"
black = "^19.10b0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

